--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Covid-19 Tracker</title>
   </head>
   <body>
     <noscript>
